move C sources to sample folder
tmp

tmp

tmp

tmp

tmp

tmp

tmp

tmp

tmp

tmp

tmp

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,7 +17,15 @@
             "request": "launch",
             "mainClass": "com.unyaunya.minic.CompilerMain",
             "projectName": "app",
-            "args": ["${file}"]
+            "args": ["${file}", "build/rslt.txt"]
+        }
+        {
+            "type": "java",
+            "name": "CompilerMainErr",
+            "request": "launch",
+            "mainClass": "com.unyaunya.minic.CompilerMain",
+            "projectName": "app",
+            "args": []
         }
     ]
 }
